--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "printWidth": 80
+  },
+  "dependencies": {
+    "@types/spotify-api": "^0.0.1"
   }
 }
