--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "printWidth": 80
   },
   "dependencies": {
-    "@types/spotify-api": "^0.0.1"
+    "@types/spotify-api": "^0.0.1",
+    "jso": "^4.1.1"
   }
 }
