--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "jsx": "react",
     "skipLibCheck": true,
-    "lib": ["es2017", "dom"]
+    "lib": ["es2017", "dom", "es2018.promise"]
   },
   "include": [
     "src/**/*"
